--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -21,4 +21,4 @@ jobs:
       uses: ./.github/actions/issue-maker
       with:
         repo-token: ${{secrets.GITHUB_TOKEN}}
-        joke: "TESTE"
+        joke: ${{steps.jokes.outputs.joke-output}}
