add id to joke action

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -14,7 +14,8 @@ jobs:
     - name: hello-action
       uses: ./.github/actions/hello-world
 
-    - name: jokes
+    - name: get-random-joke
+      id: jokes
       uses: ./.github/actions/joke-action
     
     - name: create-issue
